--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -13,7 +13,8 @@ jobs:
 
       # selecting a toolchain either by action or manual `rustup` calls should happen
       # before the plugin, as the cache uses the current rustc version as its cache key
-      - run: rustup show
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
 
       - uses: Swatinem/rust-cache@v2
 
