--- a/.github/workflows/linters-cargo.yml
+++ b/.github/workflows/linters-cargo.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # selecting a toolchain either by action or manual `rustup` calls should happen
-      # before the plugin, as the cache uses the current rustc version as its cache key
-      - run: rustup show
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly-2024-10-04
 
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
