--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -13,8 +13,9 @@ jobs:
 
       # selecting a toolchain either by action or manual `rustup` calls should happen
       # before the plugin, as the cache uses the current rustc version as its cache key
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly-2024-10-04
 
       - uses: Swatinem/rust-cache@v2
 
