--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -11,11 +11,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # selecting a toolchain either by action or manual `rustup` calls should happen
-      # before the plugin, as the cache uses the current rustc version as its cache key
-      - uses: dtolnay/rust-toolchain@master
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly-2024-10-04
+          profile: minimal
+          toolchain: nightly
+          override: true
+          default: true
 
       - uses: Swatinem/rust-cache@v2
 
