--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -94,5 +94,7 @@ jobs:
       - name: Run e2e test
         env:
           SETTLEMENT_RPC_URL: ${{ secrets.ETHEREUM_SEPOLIA_BLAST_RPC }}
+          # the self hosted runner has a different region so we override it here
+          AWS_REGION: us-east-1
         run: |
           RUST_LOG=trace cargo test --features testing test_orchestrator_workflow -- --nocapture
