--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -11,13 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly
-          override: true
-          default: true
+      - run: rustup show
 
       - uses: Swatinem/rust-cache@v2
 
