added logs to e2e

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -97,4 +97,4 @@ jobs:
           # the self hosted runner has a different region so we override it here
           AWS_REGION: us-east-1
         run: |
-          RUST_LOG=trace cargo test --features testing test_orchestrator_workflow -- --nocapture
+          RUST_LOG=info  cargo test --features testing test_orchestrator_workflow -- --nocapture
