snos rpc in secret

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,6 +5,8 @@ on:
     secrets:
       ETHEREUM_SEPOLIA_BLAST_RPC:
         required: true
+      RPC_FOR_SNOS:
+        required: true
 
 jobs:
   coverage:
@@ -137,6 +139,7 @@ jobs:
       - name: Run llvm-cov tests
         env:
           SETTLEMENT_RPC_URL: ${{ secrets.ETHEREUM_SEPOLIA_BLAST_RPC }}
+          RPC_FOR_SNOS: ${{ secrets.RPC_FOR_SNOS }}
           # the self hosted runner has a different region so we override it here
           AWS_REGION: us-east-1
         run: RUST_LOG=debug RUST_BACKTRACE=1 cargo llvm-cov nextest --release --features testing --lcov --output-path lcov.info --test-threads=1 --workspace --exclude=e2e-tests --no-fail-fast
