--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -105,15 +105,15 @@ jobs:
           ref: "0c821aecd1cafc516d00548473fcaddaa4dc0ce4"
           path: madara
 
-      - name: Build Madara
-        working-directory: madara
-        run: |
-          cargo build
-          mv target/debug/madara ../madara-binary
-          cd ..
-          echo -e "
-          MADARA_BINARY_PATH=\"$(pwd)/madara-binary\"" >> .env.test
-          cat .env.test
+      # - name: Build Madara
+      #   working-directory: madara
+      #   run: |
+      #     cargo build
+      #     mv target/debug/madara ../madara-binary
+      #     cd ..
+      #     echo -e "
+      #     MADARA_BINARY_PATH=\"$(pwd)/madara-binary\"" >> .env.test
+      #     cat .env.test
 
       - name: Getting neccesary files for testing
         run: |
