--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -142,7 +142,7 @@ jobs:
           RPC_FOR_SNOS: ${{ secrets.RPC_FOR_SNOS }}
           # the self hosted runner has a different region so we override it here
           AWS_REGION: us-east-1
-        run: RUST_LOG=debug RUST_BACKTRACE=1 cargo nextest run tests::jobs::snos_job::test_process_job --nocapture
+        run: RUST_LOG=debug RUST_BACKTRACE=1 cargo nextest run --release tests::jobs::snos_job::test_process_job --nocapture
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2
