adde rustup show

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -134,6 +134,9 @@ jobs:
           # Building the cairo lang repo requirements
           ./scripts/setup-tests.sh
 
+      - name: Check rust version
+        run: rustup show
+
       - name: Run llvm-cov tests
         env:
           SETTLEMENT_RPC_URL: ${{ secrets.ETHEREUM_SEPOLIA_BLAST_RPC }}
