--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,10 @@ PORT=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
-AWS_ENDPOINT_URL=
+
+##### Omniqueue #####
+
+AWS_DEFAULT_REGION="localhost"
 
 ##### STORAGE #####
 
@@ -22,6 +25,11 @@ SQS_JOB_PROCESSING_QUEUE_URL=
 SQS_JOB_VERIFICATION_QUEUE_URL=
 SQS_JOB_HANDLE_FAILURE_QUEUE_URL=
 SQS_WORKER_TRIGGER_QUEUE_URL=
+
+##### SNS #####
+
+ALERTS="sns"
+AWS_SNS_ARN="arn:aws:sns:us-east-1:000000000000:madara-orchestrator-arn"
 
 ##### DATABASE #####
 
@@ -44,7 +52,7 @@ DA_LAYER=
 SETTLEMENT_LAYER=
 SETTLEMENT_RPC_URL=
 MADARA_RPC_URL=
-MEMORY_PAGES_CONTRACT_ADDRESS=
+GPS_VERIFIER_CONTRACT_ADDRESS=
 PRIVATE_KEY=
 ETHEREUM_PRIVATE_KEY=
 L1_CORE_CONTRACT_ADDRESS=
