add back aws endpoint for test env

--- a/.env.test
+++ b/.env.test
@@ -76,3 +76,5 @@ TRACING_LEVEL="info"
 STARKNET_OPERATOR_ADDRESS="0x5b98B836969A60FEC50Fa925905Dd1D382a7db43"
 AWS_SNS_ARN_NAME="madara-orchestrator-arn"
 MADARA_BINARY_PATH="/path/to/madara"
+# pick up by AWS sdk
+AWS_ENDPOINT_URL="http://localhost.localstack.cloud:4566"
