--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "crates/prover-services/prover-client-interface",
   "crates/prover-services/gps-fact-checker",
   "crates/prover-services/sharp-service",
+  "crates/prover-services/atlantic-service",
   "crates/utils",
   "crates/settlement-clients/settlement-client-interface",
   "crates/settlement-clients/ethereum",
@@ -54,6 +55,8 @@ reqwest = { version = "0.12.7", features = [
   "rustls-tls",
   "native-tls",
   "json",
+  "multipart",
+  "stream",
 ] }
 rstest = "0.22.0"
 serde = { version = "1.0.197", features = ["derive"] }
@@ -78,6 +81,7 @@ testcontainers = "0.18.0"
 once_cell = "1.8"
 appchain-core-contract-client = { git = "https://github.com/byteZorvin/zaun", branch = "type-update" }
 crypto-bigint = { version = "0.5.5" }
+env_logger = "0.11.5"
 
 
 # Instrumentation
@@ -109,8 +113,8 @@ cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", branch = "notles
 
 # Snos & Sharp (Starkware)
 # TODO: Update branch to main once the PR is merged (PR #368 in the snos repository)
-starknet-os = { git = "https://github.com/ocdbytes/snos", rev = "71bd0a102735f690c503b8e708773a2db843ef59" }
-prove_block = { git = "https://github.com/ocdbytes/snos", rev = "71bd0a102735f690c503b8e708773a2db843ef59" }
+starknet-os = { git = "https://github.com/ocdbytes/snos", rev = "836a4a7b3f378ef73a06a3f7f24ce6dde287a04f" }
+prove_block = { git = "https://github.com/ocdbytes/snos", rev = "836a4a7b3f378ef73a06a3f7f24ce6dde287a04f" }
 
 # Madara prover API
 madara-prover-common = { git = "https://github.com/Moonsong-Labs/madara-prover-api", branch = "od/use-latest-cairo-vm" }
