feat: added l1 and l2 proving apis

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,11 @@ SHARP_USER_KEY=
 SHARP_SERVER_CRT=
 SHARP_PROOF_LAYOUT=
 
+ATLANTIC_API_KEY=
+ATLANTIC_URL=
+MOCK_FACT_HASH=
+PROVER_FOR_L3=
+
 ##### ON CHAIN CONFIG #####
 
 DA_LAYER=
