--- a/.env.test
+++ b/.env.test
@@ -51,11 +51,14 @@ SHARP_PROOF_LAYOUT="small"
 
 ATLANTIC_API_KEY="982386fd-2390-4cb4-b25a-039631da3b4e"
 ATLANTIC_URL="https://sharp.api.herodotus.cloud/"
+MOCK_FACT_HASH="true" # Whether to use mock fact registry
+
+PROVER_FOR_L3="herodotus" # ("herodotus" | "starkware")
 
 ##### ON CHAIN CONFIG #####
 
 DA_LAYER="ethereum"
-SETTLEMENT_LAYER="ethereum"
+SETTLEMENT_LAYER="ethereum" # Should be either `ethereum` or `starknet`
 SETTLEMENT_RPC_URL="https://eth-sepolia.public.blastapi.io"
 MADARA_RPC_URL=""
 MEMORY_PAGES_CONTRACT_ADDRESS="0x07ec0D28e50322Eb0C159B9090ecF3aeA8346DFe"
