move database name to env

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,7 @@ AWS_SNS_ARN="arn:aws:sns:us-east-1:000000000000:madara-orchestrator-arn"
 
 DATABASE=
 MONGODB_CONNECTION_STRING=
+DATABASE_NAME=
 
 ##### PROVER #####
 
