--- a/.env.test
+++ b/.env.test
@@ -35,6 +35,7 @@ AWS_SNS_ARN="arn:aws:sns:us-east-1:000000000000:madara-orchestrator-arn"
 
 DATABASE="mongodb"
 MONGODB_CONNECTION_STRING="mongodb://localhost:27017"
+DATABASE_NAME="orchestrator"
 
 ##### PROVER #####
 
