--- a/.env.test
+++ b/.env.test
@@ -58,7 +58,7 @@ PROVER_FOR_L3="herodotus" # ("herodotus" | "starkware")
 ##### ON CHAIN CONFIG #####
 
 DA_LAYER="ethereum"
-SETTLEMENT_LAYER="ethereum" # Should be either `ethereum` or `starknet`
+SETTLEMENT_LAYER="starknet" # Should be either `ethereum` or `starknet`
 SETTLEMENT_RPC_URL="https://eth-sepolia.public.blastapi.io"
 MADARA_RPC_URL=""
 MEMORY_PAGES_CONTRACT_ADDRESS="0x07ec0D28e50322Eb0C159B9090ecF3aeA8346DFe"
