feat : added snos latest block env

--- a/.env.test
+++ b/.env.test
@@ -76,3 +76,7 @@ AWS_SNS_ARN_NAME="madara-orchestrator-arn"
 MADARA_BINARY_PATH="/path/to/madara"
 # pick up by AWS sdk
 AWS_ENDPOINT_URL="http://localhost.localstack.cloud:4566"
+
+##### E2E test #####
+
+SNOS_LATEST_BLOCK=218483
