--- a/crates/prover-services/atlantic-service/Cargo.toml
+++ b/crates/prover-services/atlantic-service/Cargo.toml
@@ -8,6 +8,7 @@ alloy.workspace = true
 async-trait.workspace = true
 base64 = "0.22.1"
 cairo-vm.workspace = true
+chrono.workspace = true
 color-eyre.workspace = true
 dotenvy.workspace = true
 env_logger.workspace = true
@@ -22,6 +23,7 @@ rstest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 starknet-os.workspace = true
+tempfile.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tokio-util = { version = "0.7.12", features = ["codec"] }
