chore: change to atlantic proving service

--- a/.env.test
+++ b/.env.test
@@ -39,7 +39,7 @@ DATABASE_NAME="orchestrator"
 
 ##### PROVER #####
 
-PROVER_SERVICE="sharp"
+PROVER_SERVICE="atlantic"
 SHARP_CUSTOMER_ID="sharp_consumer_id"
 SHARP_URL="http://127.0.0.1:5000"
 # [IMP!!!] These are test certificates (they don't work)
