--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -57,6 +57,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 settlement-client-interface = { workspace = true }
 sharp-service = { workspace = true }
+atlantic-service = { workspace = true }
 starknet = { workspace = true }
 starknet-core = "0.9.0"
 starknet-os = { workspace = true }
