add block time to anvil testing

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -71,7 +71,7 @@ jobs:
           then
               echo "Anvil is installed. Version information:"
               anvil --version
-              anvil &
+              anvil --block-time 6 &
           else
               echo "Anvil is not installed or not in PATH"
               exit 1
