refactor init commit

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 
 HOST=
 PORT=
+SNOS_PROOF_LAYOUT=
 
 ##### AWS CONFIG #####
 
@@ -40,17 +41,20 @@ DATABASE_NAME=
 ##### PROVER #####
 
 PROVER_SERVICE=
+
+## if using sharp
 SHARP_CUSTOMER_ID=
 SHARP_URL=
 SHARP_USER_CRT=
 SHARP_USER_KEY=
 SHARP_SERVER_CRT=
-SHARP_PROOF_LAYOUT=
 
+
+## if using atlantic
 ATLANTIC_API_KEY=
 ATLANTIC_URL=
 MOCK_FACT_HASH=
-PROVER_FOR_L3=
+PROVER_TYPE=
 
 ##### ON CHAIN CONFIG #####
 
