--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,8 @@ once_cell = "1.8"
 appchain-core-contract-client = { git = "https://github.com/byteZorvin/zaun", branch = "type-update" }
 crypto-bigint = { version = "0.5.5" }
 env_logger = "0.11.5"
+strum_macros = "0.26.4"
+strum = "0.26.3"
 
 
 # Instrumentation
