--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -62,7 +62,7 @@ starknet = { workspace = true }
 starknet-core = "0.9.0"
 starknet-os = { workspace = true }
 starknet-settlement-client = { workspace = true }
-strum_macros = "0.26.4"
+strum_macros = { workspace = true }
 tempfile = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
