--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -25,3 +25,5 @@ tracing = { workspace = true }
 tracing-core = { workspace = true, default-features = false }
 tracing-opentelemetry = "0.26.0"
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
+reqwest = { workspace = true }
+url = { workspace = true }
