--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - SHARP_USER_CRT=${SHARP_USER_CRT}
       - SHARP_USER_KEY=${SHARP_USER_KEY}
       - SHARP_SERVER_CRT=${SHARP_SERVER_CRT}
-      - SHARP_PROOF_LAYOUT=${SHARP_PROOF_LAYOUT:-small}
+      - SNOS_PROOF_LAYOUT=${SNOS_PROOF_LAYOUT:-all_cairo}
       - DA_LAYER=${DA_LAYER:-ethereum}
       - SETTLEMENT_LAYER=${SETTLEMENT_LAYER:-ethereum}
       - SETTLEMENT_RPC_URL=${SETTLEMENT_RPC_URL}
