--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,8 +109,8 @@ cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", branch = "notles
 
 # Snos & Sharp (Starkware)
 # TODO: Update branch to main once the PR is merged (PR #368 in the snos repository)
-starknet-os = { git = "https://github.com/keep-starknet-strange/snos", rev = "af74c7599231c25ad9c342f6888668680a9782d9" }
-prove_block = { git = "https://github.com/keep-starknet-strange/snos", rev = "af74c7599231c25ad9c342f6888668680a9782d9" }
+starknet-os = { path = "/Users/apoorvsadana/Documents/GitHub/snos/crates/starknet-os" }
+prove_block = { path = "/Users/apoorvsadana/Documents/GitHub/snos/crates/bin/prove_block" }
 
 # Madara prover API
 madara-prover-common = { git = "https://github.com/Moonsong-Labs/madara-prover-api", branch = "od/use-latest-cairo-vm" }
