--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,13 +108,8 @@ cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", branch = "notles
 ] }
 
 # Snos & Sharp (Starkware)
-# TODO: Update branch to main once the PR is merged (PR #368 in the snos repository)
-starknet-os = { path = "/Users/apoorvsadana/Documents/GitHub/snos/crates/starknet-os" }
-prove_block = { path = "/Users/apoorvsadana/Documents/GitHub/snos/crates/bin/prove_block" }
-
-# Madara prover API
-madara-prover-common = { git = "https://github.com/Moonsong-Labs/madara-prover-api", branch = "od/use-latest-cairo-vm" }
-madara-prover-rpc-client = { git = "https://github.com/Moonsong-Labs/madara-prover-api", branch = "od/use-latest-cairo-vm" }
+starknet-os = { git = "https://github.com/keep-starknet-strange/snos", rev = "662d1706f5855044e52ebf688a18dd80016c8700" }
+prove_block = { git = "https://github.com/keep-starknet-strange/snos", rev = "662d1706f5855044e52ebf688a18dd80016c8700" }
 
 # Project
 da-client-interface = { path = "crates/da-clients/da-client-interface" }
