--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -79,18 +79,12 @@ jobs:
 
       - name: Build SNOS files
         run: |
-          # Downloading all the deps
-          cargo fetch
-          # Navigate to checkouts folder
-          cd /home/runner/.cargo/git/checkouts
-          # Navigating to snos
-          cd snos-59fe8329bb16fe65
-          # Navigating to the build
-          cd af74c75
-          # Activating the venv
-          source ~/cairo_venv/bin/activate
-          # Building the cairo lang repo requirements
-          ./scripts/setup-tests.sh
+          mkdir -p build
+          git submodule update --init --recursive
+          cd cairo-lang
+          git checkout a86e92bfde9c171c0856d7b46580c66e004922f3
+          cd ..
+          cairo-compile cairo-lang/src/starkware/starknet/core/os/os.cairo --output build/os_latest.json --cairo_path cairo-lang/src
 
       - name: Run e2e test
         env:
