test: to be reverted

--- a/.env.test
+++ b/.env.test
@@ -82,7 +82,7 @@ STARKNET_ACCOUNT_ADDRESS=0x3bb306a004034dba19e6cf7b161e7a4fef64bc1078419e8ad1876
 
 ## Instrumentation
 OTEL_SERVICE_NAME="madara_orchestrator"
-
+OTEL_COLLECTOR_ENDPOINT=""
 
 ##### Tests #####
 
