--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ lcov.info
 node_modules
 
 # env file created by makefile
-.makefile-env
+.makefile.json
+.pids.json
 
 # venv setup when building snos
 orchestrator_venv/
