update: run_cmd for settlement client

--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -9,6 +9,8 @@ edition.workspace = true
 color-eyre = { workspace = true }
 serde.workspace = true
 thiserror.workspace = true
+clap = { version = "4.4", features = ["derive", "env"] }
+url = { workspace = true }
 
 #Instrumentation
 opentelemetry = { workspace = true, features = ["metrics", "logs"] }
