--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -11,7 +11,7 @@ serde.workspace = true
 thiserror.workspace = true
 clap = { version = "4.4", features = ["derive", "env"] }
 url = { workspace = true }
-
+serde_json = { workspace = true }
 #Instrumentation
 opentelemetry = { workspace = true, features = ["metrics", "logs"] }
 opentelemetry-appender-tracing = { workspace = true, default-features = false }
