--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -12,7 +12,16 @@ name = "orchestrator"
 path = "src/main.rs"
 
 [dependencies]
-alloy = { workspace = true }
+alloy = { git = "https://github.com/alloy-rs/alloy", rev = "68952c0", features = [
+  "consensus",
+  "providers",
+  "rpc-client",
+  "transport-http",
+  "network",
+  "eips",
+  "signers",
+  "signer-wallet",
+] }
 assert_matches = "1.5.0"
 async-std = "1.12.0"
 async-trait = { workspace = true }
