--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,7 @@ lazy_static = "1.4.0"
 stark_evm_adapter = "0.1.1"
 hex = "0.4"
 itertools = "0.13.0"
+clap = { version = "4.4", features = ["derive", "env"] }
 mockall = "0.13.0"
 testcontainers = "0.18.0"
 once_cell = "1.8"
