--- a/e2e-tests/Cargo.toml
+++ b/e2e-tests/Cargo.toml
@@ -13,6 +13,7 @@ aws-sdk-s3.workspace = true
 aws-sdk-sqs.workspace = true
 bytes.workspace = true
 chrono = { workspace = true }
+clap.workspace = true
 color-eyre.workspace = true
 dotenvy.workspace = true
 ethereum-settlement-client.workspace = true
