--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -9,6 +9,7 @@ edition.workspace = true
 color-eyre = { workspace = true }
 serde.workspace = true
 thiserror.workspace = true
+serde_json.workspace = true
 
 #Instrumentation
 opentelemetry = { workspace = true, features = ["metrics", "logs"] }
