--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,16 +107,16 @@ tracing-subscriber = { version = "0.3.18", features = [
 tracing-opentelemetry = "0.26.0"
 
 # Cairo VM
-cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", branch = "notlesh/segment-arena-relocation-fix", features = [
+cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", branch = "herman/fix-pie-serialization", features = [
   "cairo-1-hints",
   "extensive_hints",
   "mod_builtin",
 ] }
 
 # Snos & Sharp (Starkware)
-# TODO: Update branch to main once the PR is merged (PR #368 in the snos repository)
-starknet-os = { git = "https://github.com/keep-starknet-strange/snos", rev = "3bd95bfb315a596519b5b1d3c81114fbfa06f8a6" }
-prove_block = { git = "https://github.com/keep-starknet-strange/snos", rev = "3bd95bfb315a596519b5b1d3c81114fbfa06f8a6" }
+starknet-os = { git = "https://github.com/Mohiiit/snos", rev = "2dcd3b0f0c6bfa368a802de12de29cd124c72bb8" }
+prove_block = { git = "https://github.com/Mohiiit/snos", rev = "2dcd3b0f0c6bfa368a802de12de29cd124c72bb8" }
+
 
 # Madara prover API
 madara-prover-common = { git = "https://github.com/Moonsong-Labs/madara-prover-api", branch = "od/use-latest-cairo-vm" }
