--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -71,7 +71,8 @@ starknet = { workspace = true }
 starknet-core = "0.9.0"
 starknet-os = { workspace = true }
 starknet-settlement-client = { workspace = true }
-strum_macros = "0.26.4"
+strum = "0.26.0"
+strum_macros = "0.26.0"
 tempfile = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
