fix: changing prover service to sharp

--- a/.env.test
+++ b/.env.test
@@ -52,7 +52,7 @@ DATABASE_NAME="orchestrator"
 
 ##### PROVER #####
 
-PROVER_SERVICE="atlantic"
+PROVER_SERVICE="sharp"
 
 ## if using sharp
 SHARP_CUSTOMER_ID="sharp_consumer_id"
