fix: adding proof layout to env file

--- a/.env.test
+++ b/.env.test
@@ -53,6 +53,7 @@ DATABASE_NAME="orchestrator"
 ##### PROVER #####
 
 PROVER_SERVICE="sharp"
+SNOS_PROOF_LAYOUT="all_cairo"
 
 ## if using sharp
 SHARP_CUSTOMER_ID="sharp_consumer_id"
