update: env fixes for tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,20 +28,20 @@ services:
       - SQS_WORKER_TRIGGER_QUEUE_URL=${SQS_WORKER_TRIGGER_QUEUE_URL}
       - ALERTS=${ALERTS:-sns}
       - AWS_SNS_ARN=${AWS_SNS_ARN}
-      - AWS_SNS_ARN_NAME=${AWS_SNS_ARN_NAME}
+      - MADARA_ORCHESTRATOR_AWS_SNS_ARN=${MADARA_ORCHESTRATOR_AWS_SNS_ARN}
       - DATABASE=${DATABASE:-mongodb}
       - MONGODB_CONNECTION_STRING=${MONGODB_CONNECTION_STRING}
       - PROVER_SERVICE=${PROVER_SERVICE:-sharp}
-      - SHARP_CUSTOMER_ID=${SHARP_CUSTOMER_ID}
-      - SHARP_URL=${SHARP_URL}
-      - SHARP_USER_CRT=${SHARP_USER_CRT}
-      - SHARP_USER_KEY=${SHARP_USER_KEY}
-      - SHARP_SERVER_CRT=${SHARP_SERVER_CRT}
-      - SHARP_PROOF_LAYOUT=${SHARP_PROOF_LAYOUT:-small}
+      - MADARA_ORCHESTRATOR_SHARP_CUSTOMER_ID=${MADARA_ORCHESTRATOR_SHARP_CUSTOMER_ID}
+      - MADARA_ORCHESTRATOR_SHARP_URL=${MADARA_ORCHESTRATOR_SHARP_URL}
+      - MADARA_ORCHESTRATOR_SHARP_USER_CRT=${MADARA_ORCHESTRATOR_SHARP_USER_CRT}
+      - MADARA_ORCHESTRATOR_SHARP_USER_KEY=${MADARA_ORCHESTRATOR_SHARP_USER_KEY}
+      - MADARA_ORCHESTRATOR_SHARP_SERVER_CRT=${MADARA_ORCHESTRATOR_SHARP_SERVER_CRT}
+      - MADARA_ORCHESTRATOR_SHARP_PROOF_LAYOUT=${MADARA_ORCHESTRATOR_SHARP_PROOF_LAYOUT:-small}
       - DA_LAYER=${DA_LAYER:-ethereum}
       - SETTLEMENT_LAYER=${SETTLEMENT_LAYER:-ethereum}
       - SETTLEMENT_RPC_URL=${SETTLEMENT_RPC_URL}
-      - MADARA_RPC_URL=${MADARA_RPC_URL}
+      - MADARA_ORCHESTRATOR_MADARA_RPC_URL=${MADARA_ORCHESTRATOR_MADARA_RPC_URL}
       - MEMORY_PAGES_CONTRACT_ADDRESS=${MEMORY_PAGES_CONTRACT_ADDRESS}
       - ETHEREUM_PRIVATE_KEY=${ETHEREUM_PRIVATE_KEY}
       - L1_CORE_CONTRACT_ADDRESS=${L1_CORE_CONTRACT_ADDRESS}
