--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 ##### ORCHESTRATOR #####
 
-HOST=
-PORT=
-MAX_BLOCK_TO_PROCESS=
+MADARA_ORCHESTRATOR_HOST=
+MADARA_ORCHESTRATOR_PORT=
+MADARA_ORCHESTRATOR_MAX_BLOCK_NO_TO_PROCESS=
 
 ##### AWS CONFIG #####
 
@@ -17,7 +17,7 @@ AWS_DEFAULT_REGION="localhost"
 ##### STORAGE #####
 
 DATA_STORAGE=
-AWS_S3_BUCKET_NAME=
+MADARA_ORCHESTRATOR_AWS_S3_BUCKET_NAME=
 
 ##### QUEUE #####
 
@@ -30,13 +30,13 @@ SQS_WORKER_TRIGGER_QUEUE_URL=
 ##### SNS #####
 
 ALERTS="sns"
-AWS_SNS_ARN="arn:aws:sns:us-east-1:000000000000:madara-orchestrator-arn"
+MADARA_ORCHESTRATOR_AWS_SNS_ARN="arn:aws:sns:us-east-1:000000000000:madara-orchestrator-arn"
 
 ##### DATABASE #####
 
 DATABASE=
-MONGODB_CONNECTION_STRING=
-DATABASE_NAME=
+MADARA_ORCHESTRATOR_MONGODB_CONNECTION_URL=
+MADARA_ORCHESTRATOR_DATABASE_NAME=
 
 ##### PROVER #####
 
@@ -52,17 +52,17 @@ MADARA_ORCHESTRATOR_SHARP_PROOF_LAYOUT=
 
 DA_LAYER=
 SETTLEMENT_LAYER=
-SETTLEMENT_RPC_URL=
+MADARA_ORCHESTRATOR_ETHEREUM_SETTLEMENT_RPC_URL=
 MADARA_ORCHESTRATOR_MADARA_RPC_URL=
 MADARA_ORCHESTRATOR_GPS_VERIFIER_CONTRACT_ADDRESS=
 PRIVATE_KEY=
-ETHEREUM_PRIVATE_KEY=
-L1_CORE_CONTRACT_ADDRESS=
+MADARA_ORCHESTRATOR_ETHEREUM_PRIVATE_KEY=
+MADARA_ORCHESTRATOR_L1_CORE_CONTRACT_ADDRESS=
 
 ##### STARKNET SETTLEMENT (L3s) #####
-STARKNET_PRIVATE_KEY=
-STARKNET_ACCOUNT_ADDRESS=
+MADARA_ORCHESTRATOR_STARKNET_PRIVATE_KEY=
+MADARA_ORCHESTRATOR_STARKNET_ACCOUNT_ADDRESS=
 
 ##### Instrumentation #####
-OTEL_SERVICE_NAME=
-OTEL_COLLECTOR_ENDPOINT=
+MADARA_ORCHESTRATOR_OTEL_SERVICE_NAME=
+MADARA_ORCHESTRATOR_OTEL_COLLECTOR_ENDPOINT=
