--- a/.env.test
+++ b/.env.test
@@ -96,7 +96,7 @@ MADARA_ORCHESTRATOR_PORT=3000
 
 MADARA_ORCHESTRATOR_MAX_BLOCK_NO_TO_PROCESS=1000
 MADARA_ORCHESTRATOR_MIN_BLOCK_NO_TO_PROCESS=0
-MADARA_ORCHESTRATOR_MADARA_RPC_URL=http://localhost:9944
+MADARA_ORCHESTRATOR_MADARA_RPC_URL=http://81.16.176.130:9545
 
 
 #### SNOS ####
