--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,16 +34,23 @@ alloy = { version = "0.2.1", features = [
   "json-rpc",
   "rpc-client",
 ] }
+alloy-primitives = { version = "0.7.7", default-features = false }
+alloy-sol-types = "0.8.5"
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-s3 = { version = "1.38.0", features = ["behavior-version-latest"] }
 aws-sdk-eventbridge = { version = "1.41.0", features = [
   "behavior-version-latest",
 ] }
+aws-sdk-sns = { version = "1.40.0", features = ["behavior-version-latest"] }
+aws-credential-types = { version = "1.2.1", features = [
+  "hardcoded-credentials",
+] }
+assert_matches = "1.5.0"
 aws-sdk-sqs = "1.36.0"
 axum = { version = "0.7.4" }
 axum-macros = "0.4.1"
 bincode = "1.3.3"
-bytes = "1.6.0"
+bytes = "1.7.2"
 color-eyre = "0.6.2"
 chrono = "0.4.0"
 c-kzg = "1.0.3"
@@ -60,6 +67,7 @@ reqwest = { version = "0.12.7", features = [
   "stream",
 ] }
 rstest = "0.22.0"
+base64 = "0.22.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 starknet = "0.11.0"
@@ -68,15 +76,19 @@ thiserror = "1.0.57"
 tokio = { version = "1.37.0" }
 tokio-stream = "0.1.15"
 tokio-util = "0.7.11"
+dotenv = "0.15.0"
+starknet-core = "0.9.0"
 url = { version = "2.5.0", features = ["serde"] }
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
-httpmock = { version = "0.7.0", features = ["remote"] }
-num-bigint = { version = "0.4.4" }
+httpmock = { version = "0.8.0-alpha.1", features = ["proxy", "remote"] }
+num-bigint = { version = "0.4.5" }
 num-traits = "0.2"
 lazy_static = "1.4.0"
 stark_evm_adapter = "0.1.1"
 hex = "0.4"
 itertools = "0.13.0"
+mockall_double = "0.3.1"
+hyper = { version = "0.14", features = ["full"] }
 mockall = "0.13.0"
 testcontainers = "0.18.0"
 once_cell = "1.8"
@@ -85,6 +97,7 @@ crypto-bigint = { version = "0.5.5" }
 env_logger = "0.11.5"
 strum_macros = "0.26.4"
 strum = "0.26.3"
+async-std = { version = "1.13.0", features = ["attributes"] }
 
 
 # Instrumentation
@@ -123,6 +136,10 @@ prove_block = { git = "https://github.com/Mohiiit/snos", rev = "2dcd3b0f0c6bfa36
 # Madara prover API
 madara-prover-common = { git = "https://github.com/Moonsong-Labs/madara-prover-api", branch = "od/use-latest-cairo-vm" }
 madara-prover-rpc-client = { git = "https://github.com/Moonsong-Labs/madara-prover-api", branch = "od/use-latest-cairo-vm" }
+
+# Majin Blob
+majin-blob-core = { git = "https://github.com/AbdelStark/majin-blob", branch = "main" }
+majin-blob-types = { git = "https://github.com/AbdelStark/majin-blob", branch = "main" }
 
 # Project
 da-client-interface = { path = "crates/da-clients/da-client-interface" }
