update: optimised fixes

--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -63,8 +63,8 @@ starknet = { workspace = true }
 starknet-core = "0.9.0"
 starknet-os = { workspace = true }
 starknet-settlement-client = { workspace = true }
-strum = "0.26.0"
-strum_macros = "0.26.0"
+strum = { workspace = true }
+strum_macros = { workspace = true }
 tempfile = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
