--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,8 @@ rstest = "0.22.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 starknet = "0.11.0"
+strum = "0.26.0"
+strum_macros = "0.26.0"
 tempfile = "3.12.0"
 thiserror = "1.0.57"
 tokio = { version = "1.37.0" }
