--- a/e2e-tests/Cargo.toml
+++ b/e2e-tests/Cargo.toml
@@ -26,8 +26,8 @@ rstest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 starknet.workspace = true
-strum = "0.26.0"
-strum_macros = "0.26.0"
+strum = { workspace = true }
+strum_macros = { workspace = true }
 testcontainers.workspace = true
 tokio = { workspace = true, features = ["full"] }
 tokio-stream.workspace = true
