update: fixed coverage

--- a/.env.test
+++ b/.env.test
@@ -13,7 +13,9 @@ AWS_DEFAULT_REGION=localhost
 
 #### ALERTS ####
 
+MADARA_ORCHESTRATOR_AWS_SNS_ARN_NAME=madara-orchestrator-arn
 MADARA_ORCHESTRATOR_AWS_SNS_ARN=arn:aws:sns:us-east-1:000000000000:madara-orchestrator-arn
+
 
 #### DATA AVAILABILITY ####
 
