fix: atlantic endpoint updated

--- a/.env.test
+++ b/.env.test
@@ -66,10 +66,10 @@ PROVER_LAYOUT_NAME="dynamic"
 
 
 ## if using atlantic
-ATLANTIC_API_KEY="982386fd-2390-4cb4-b25a-039631da3b4e"
-ATLANTIC_URL="https://sharp.api.herodotus.cloud"
+ATLANTIC_API_KEY="73307f1b-6464-412d-8cce-9473b5073cc2"
+ATLANTIC_URL="https://atlantic.api.herodotus.cloud"
 # ATLANTIC_URL="https://webhook.site/2b6ef806-7c50-4799-bfb9-76f22e1c4598"
-MOCK_FACT_HASH="true" # Whether to use mock fact registry
+MOCK_FACT_HASH="false" # Whether to use mock fact registry
 PROVER_TYPE="herodotus" # ("herodotus" | "starkware")
 
 ##### ON CHAIN CONFIG #####
