--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ alloy = { version = "0.2.1", features = [
   "json-rpc",
   "rpc-client",
 ] }
+alloy-primitives = { version = "0.7.7", default-features = false }
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-s3 = { version = "1.38.0", features = ["behavior-version-latest"] }
 aws-sdk-eventbridge = { version = "1.41.0", features = [
