--- a/crates/settlement-clients/ethereum/Cargo.toml
+++ b/crates/settlement-clients/ethereum/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 
 [dependencies]
 alloy = { workspace = true, features = ["full", "node-bindings"] }
-alloy-primitives = { version = "0.7.7", default-features = false }
+alloy-primitives = { workspace = true, default-features = false }
 async-trait = { workspace = true }
 bytes = "1.7.2"
 c-kzg = { workspace = true }
