fix: atlantic added in clap, get status code updated and snos branch updated as well

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,16 +122,17 @@ tracing-subscriber = { version = "0.3.18", features = [
 tracing-opentelemetry = "0.26.0"
 
 # Cairo VM
-cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", branch = "herman/fix-pie-serialization", features = [
+cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", branch = "notlesh/snos-2024-11-04", features = [
   "cairo-1-hints",
   "extensive_hints",
   "mod_builtin",
 ] }
 
+
 # Snos & Sharp (Starkware)
 # TODO: need to update this once the updated PR merges
-starknet-os = { git = "https://github.com/Mohiiit/snos", rev = "2dcd3b0f0c6bfa368a802de12de29cd124c72bb8" }
-prove_block = { git = "https://github.com/Mohiiit/snos", rev = "2dcd3b0f0c6bfa368a802de12de29cd124c72bb8" }
+starknet-os = { git = "https://github.com/keep-starknet-strange/snos", rev = "23879ebc79d9572ce11f2c9768ffeea7a8455efa" }
+prove_block = { git = "https://github.com/keep-starknet-strange/snos", rev = "23879ebc79d9572ce11f2c9768ffeea7a8455efa" }
 
 
 # Madara prover API
