--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -89,6 +89,8 @@ tracing = { workspace = true }
 tracing-core = { workspace = true, default-features = false }
 tracing-opentelemetry = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
+aws-sdk-iam = { workspace = true }
+aws-sdk-scheduler = { workspace = true }
 
 [features]
 default = ["ethereum", "with_mongodb", "with_sqs"]
