update: fixed serialization of trigger message

--- a/.env.test
+++ b/.env.test
@@ -10,6 +10,11 @@ AWS_ENDPOINT_URL=http://localhost.localstack.cloud:4566
 # For Omniqueue
 AWS_DEFAULT_REGION=localhost
 
+# For EventBridge
+
+MADARA_ORCHESTRATOR_EVENT_BRIDGE_TRIGGER_RULE_NAME=madara-orchestrator-worker-trigger
+
+
 
 #### ALERTS ####
 
@@ -59,6 +64,7 @@ MADARA_ORCHESTRATOR_ATLANTIC_RPC_NODE_URL=http://127.0.0.1:8545
 
 MADARA_ORCHESTRATOR_SQS_PREFIX=madara_orchestrator
 MADARA_ORCHESTRATOR_SQS_SUFFIX=queue
+MADARA_ORCHESTRATOR_EVENT_BRIDGE_TARGET_QUEUE_NAME=madara_orchestrator_worker_trigger_queue
 MADARA_ORCHESTRATOR_SQS_BASE_QUEUE_URL=http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000
 
 #### SETTLEMENT ####
