--- a/.env.test
+++ b/.env.test
@@ -51,7 +51,7 @@ MADARA_ORCHESTRATOR_GPS_VERIFIER_CONTRACT_ADDRESS=0x07ec0D28e50322Eb0C159B9090ec
 
 ## ATLANTIC ##
 
-MADARA_ORCHESTRATOR_ATLANTIC_API_KEY="73307f1b-6464-412d-8cce-9473b5073cc2"
+MADARA_ORCHESTRATOR_ATLANTIC_API_KEY="API-KEY"
 MADARA_ORCHESTRATOR_ATLANTIC_SERVICE_URL="https://atlantic.api.herodotus.cloud"
 MADARA_ORCHESTRATOR_ATLANTIC_MOCK_FACT_HASH="false" # Whether to use mock fact registry
 MADARA_ORCHESTRATOR_ATLANTIC_PROVER_TYPE="herodotus" # ("herodotus" | "starkware")
