docker file update and snos updated

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,8 +133,8 @@ cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", branch = "notles
 
 # Snos & Sharp (Starkware)
 # TODO: need to update this once the updated PR merges
-starknet-os = { git = "https://github.com/keep-starknet-strange/snos", branch = "tmp/snos_devnet_zero_txs" }
-prove_block = { git = "https://github.com/keep-starknet-strange/snos", branch = "tmp/snos_devnet_zero_txs" }
+starknet-os = { git = "https://github.com/Mohiiit/snos", branch = "tmp/snos_devnet_zero_txs" }
+prove_block = { git = "https://github.com/Mohiiit/snos", branch = "tmp/snos_devnet_zero_txs" }
 
 # Madara prover API
 madara-prover-common = { git = "https://github.com/Moonsong-Labs/madara-prover-api", branch = "od/use-latest-cairo-vm" }
